--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div id="step2" class="game-step">
         <h2>Step 2: Feature Selection (特徵選擇) - 建立 AI 規則</h2>
-        <p>你剛剛分類的依據是什麼？請選擇 5 個最重要的生物 **Feature** (特徵) 作為 AI 的判斷規則。 (Select 5 key features for AI rules.)</p>
+        <p>你剛剛分類的依據是什麼？請選擇 5 個最重要的生物 Feature (特徵) 作為 AI 的判斷規則。 (Select 5 key features for AI rules.)</p>
         
         <div class="step2-feature-layout">
             
