--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div id="diagnosis-results">
             </div>
     </div>
-    
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
