--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="image-focus-area">
                 <img id="test-image" src="" alt="Test Image for Prediction" style="width: 100%; height: auto; border-radius: 8px;">
                 
-                <div id="judgment-scoreboard" style="margin-top: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 8px; background: #fffbe6;">
+                <div hidden id="judgment-scoreboard" style="margin-top: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 8px; background: #fffbe6;">
                 </div>
             </div>
 
