--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div id="step1" class="game-step active">
         <h2>Step 1: Classification (分類)</h2>
-        <p>你現在是AI工程師，為了讓AI電腦學習牠們的差異，請你協助分類這些照片哪些是貓科、哪些是犬科。<br> (You are the engineer, define your classification.) <br>請根據你的直覺，將圖片拖移到貓科或犬科的分類框中。</p>
+        <p>你現在是AI工程師，為了讓AI電腦學習牠們的差異，請你協助分類這些照片哪些是貓科、哪些是犬科。<br> (You are an engineer, and please define your classification.) <br>請根據你的直覺，將圖片拖移到貓科或犬科的分類框中。</p>
         
         <div id="image-pool" class="drag-container"></div>
         <div id="classification-targets" class="drop-container"></div>
